--- a/app/views/cookies/new.html.haml
+++ b/app/views/cookies/new.html.haml
@@ -7,6 +7,13 @@
   .row
     .small-8.columns
       = f.text_field :fillings
+  %br/
+  .row
+    .small-8.columns
+      = f.label :quantity
+  .row
+    .small-8.columns
+      = f.number_field :quantity, :value => 1, :min => 1
 
   .row
     .small-8.columns
