--- a/app/views/store/index.html.haml
+++ b/app/views/store/index.html.haml
@@ -8,9 +8,9 @@
 .store-inventory
   Cookies for sale:
   %ul
-    - current_user.stored_cookies.group_by(&:fillings).each_pair do |fillings, cookies|
+    - current_user.stored_cookies.where(:ready => true).group_by(&:fillings).each_pair do |fillings, cookies|
       %li
-        = pluralize(cookies.count, "Cookie")
+        = pluralize(cookies.sum(&:quantity), "Cookie")
         with
         = fillings || "no filling"
     
